--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "^5.0.1",
     "react-spring": "^9.4.5",
     "react-xml-parser": "^1.1.8",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4",
     "xml2js": "^0.4.23"
   },
